# SoundRoom

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  SoundPoint.cpp  SoundPoint.h  SoundRoom.cpp  SoundRoom.h  SoundRoom.kdev4  View.cpp  View.h  complex.cpp  complex.h  main.cpp  speaker.cpp  speaker.h
cmake/: FindEigen2.cmake
tests/: CMakeLists.txt  ComplexTest.cpp  ComplexTest.h  SoundPointTest.cpp  SoundPointTest.h  SoundRoomTest.cpp  SoundRoomTest.h  ViewTest.cpp  ViewTest.h
